--- a/src/app/components/information/information.html
+++ b/src/app/components/information/information.html
@@ -1,6 +1,6 @@
-<ul class="questionsList">
-    <li class="questionsList__item" ng-repeat="question in $ctrl.items">
-        <a ui-sref="app.questionsItem({ id: question.id })" class="questionsList__link">{{question.question}}</a>&nbsp;
-        <span class="questionsList__delete" ng-click="$ctrl.delete(question.id)">X</span>
-    </li>
+<ul class="information">
+    <div> <img src="picture.jpg"></div>
+    <div class="information__text">
+        <a ui-sref="app.informationText({ id: information.id })" class="information__link">{{information.information}}</a>&nbsp;
+    </div>
 </ul>
