--- a/src/app/components/information/information.html
+++ b/src/app/components/information/information.html
@@ -1,4 +1,3 @@
 <div>
-    <img src="{{$ctrl.pictureURL}}">
-    <p>{{$ctrl.text}}</p>
+    <p>{{'information_description' | translate}}</p>
 </div>
