Добавил css ссылку на bootstrap

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,6 +9,7 @@
         <div ui-view></div>
 
         <link rel="stylesheet" href="./css/app.css">
+        <link rel="stylesheet" href="./css/libs.css">
         <script src="./js/libs.js"></script>
         <script src="./js/app.js"></script>
     </body>
