--- a/src/app/questions/questions.html
+++ b/src/app/questions/questions.html
@@ -3,5 +3,8 @@
 
     <questions-list items="$ctrl.questions"></questions-list>
 
+    <login-form onlogin="$ctrl.login({login: $ctrl.email, pwd: $ctrl.pwd})"
+                login="$ctrl.email" password="$ctrl.pwd"></login-form>
+
     <debugger model="$ctrl.questions"></debugger>
 </div>
