--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -2,12 +2,12 @@
 
     <h1>ВОЙТИ</h1>
 
-    <form ng-submit="$ctrl.onlogin({ login: $sctrl.login, pwd: $ctrl.password })">
+    <form ng-submit="$ctrl.submit">
         <div>
-            <input type="text" ng-model="$ctrl.login" id="loginField" placeholder="E-MAIL">
+            <input type="text" ng-model="$ctrl.form.login" id="loginField" placeholder="E-MAIL">
         </div>
         <div>
-            <input type="password" ng-model="$ctrl.password" id="passwordField" placeholder="ПАРОЛЬ">
+            <input type="password" ng-model="$ctrl.form.password" id="passwordField" placeholder="ПАРОЛЬ">
         </div>
         <div>
             <input type="checkbox" id="rememberField" ng-model="$ctrl.remember" checked>
