--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -1,5 +1,22 @@
 <div class="layout">
-    <h1 class="layout__title">Questions App</h1>
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">СЕРВИС</a>
+            </div>
+
+            <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <button type="button" class="btn btn-default navbar-btn">Выход</button>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
     <div ui-view></div>
 </div>
