Логин страница и Инфо страница

--- a/src/app/components/information/information.html
+++ b/src/app/components/information/information.html
@@ -1,3 +1,17 @@
-<div>
-    <p>{{'information_description' | translate}}</p>
+<div class="info">
+    <div class="my-info">
+        <div class="container">
+        </div>
+    </div>
+    <!--<p>{{'information_description' | translate}}</p>-->
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo
+        consequat.</p>
+
+
 </div>
+
+
