--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -1,4 +1,4 @@
-<div class="loginform my-login-form">
+<div class="my-login-form">
 
     <h2>Войти</h2>
 
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            <button class="btn btn-primary btn-block my-login-btn" type="submit" id="btn__loginField">Войти</button>
+            <button class="btn btn-danger btn-block my-login-btn" type="submit" id="btn__loginField">Войти</button>
         </div>
 
         <div class="form-group">
