Добавил awesome font. Модуль training с компонентами state, photo

--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="form-group">
-            <button class="btn btn-primary btn-block my-register-btn" type="submit" id="btn_registerField">Регистрация</button>
+            <button class="btn btn-danger btn-block my-register-btn" type="submit" id="btn_registerField">Регистрация</button>
         </div>
 
     </form>
