--- a/src/app/components/state-info/state-info.html
+++ b/src/app/components/state-info/state-info.html
@@ -1,6 +1,9 @@
-<dev>
-    <p>{{$ctrl.pulse}}<span>&hearts;</span></p>
-</dev>
-<dev>
-    <p>{{'training_state' | translate}}</p>
-</dev>
+<div class="my-state-form">
+    <div class="pulse">
+        <span>{{$ctrl.pulse}} <i class="fa fa-heart heart"></i></span>
+    </div>
+    <div>
+        <!--<p>{{'training_state' | translate}}</p>-->
+        <p> Lorem ipsum </p>
+    </div>
+</div>
