--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -31,7 +31,7 @@
                 <label for="to__registrationField">Нет учетной записи?</label>
             </div>
             <div class="col-md-5">
-                <a class="my-text-right" id="to__registrationField">Зарегистрироваться</a>
+                <a ng-href="#/register" class="my-text-right" id="to__registrationField">Зарегистрироваться</a>
             </div>
         </div>
 
