--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Example App</title>
+        <title>Comptech2017</title>
         <link rel="icon" type="image/png" href="favicon.png">
     </head>
     <body>
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" href="./css/libs.css">
         <link rel="stylesheet" href="./css/app.css">
-
+        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
         <script src="./js/libs.js"></script>
         <script src="./js/app.js"></script>
     </body>
