--- a/src/app/training/training.html
+++ b/src/app/training/training.html
@@ -1,11 +1,8 @@
-<div class="">
-    <h2>Training</h2>
-
-    <!--<photo-form items="$ctrl.strings"></photo-form>-->
-    <!--<status-form items="$ctrl.strings"></status-form>-->
-
-    <!--<questions-list items="$ctrl.questions"></questions-list>-->
-    <!--<login-form items="$ctrl.questions"></login-form>-->
-
-    <debugger model="$ctrl.questions"></debugger>
+<div class="row">
+    <div class="col-md-6">
+        <photo-form photo="$ctrl.photo"></photo-form>
+    </div>
+    <div class="col-md-6">
+        <state-info pulse="$ctrl.pulse"></state-info>
+    </div>
 </div>
