Добавлена поддержка авторизации

--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -15,7 +15,7 @@
             <input class="form-control" type="password" ng-model="$ctrl.formData.password" id="passwordField"
                    placeholder="Пароль">
             <div class="col-md-7">
-                <label> <input type="checkbox" id="rememberField" ng-model="$ctrl.remember" checked> Запомнить компьютер</label>
+                <label> <input type="checkbox" id="rememberField" ng-model="$ctrl.formData.remember" checked> Запомнить компьютер</label>
             </div>
             <div class="col-md-5 my-text-right">
                 <a href="">Забыли пароль?</a>
