Исправлены замечания по верстке

--- a/src/app/components/login-form/login-form.less
+++ b/src/app/components/login-form/login-form.less
@@ -7,5 +7,25 @@
     width: 80%;
 }
 .my-text-right{
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align:right;
 }
+
+input {
+    outline: 0 !important;
+}
+
+.my-text-right1{
+    padding-left: 5px;
+    padding-right: 15px;
+}
+
+.clearfix{
+    height: 0px;
+    clear:both
+}
+
+.my-checkbox{
+     max-width: 200px;
+ }
