--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -14,7 +14,7 @@
         <div class="form-group">
             <input class="form-control" type="password" ng-model="$ctrl.formData.password" id="passwordField"
                    placeholder="Пароль">
-            <div class="col-md-7">
+            <div class="col-md-7 col-sm-4 checkbox">
                 <label> <input type="checkbox" id="rememberField" ng-model="$ctrl.remember" checked> Запомнить компьютер</label>
             </div>
             <div class="col-md-5 my-text-right">
@@ -27,12 +27,13 @@
         </div>
 
         <div class="form-group">
-            <div class=" col-md-7">
+            <div class="col-md-7 col-sm-3">
                 <label for="to__registrationField">Нет учетной записи?</label>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 my-text-right1">
                 <a ng-href="#/register" class="my-text-right" id="to__registrationField">Зарегистрироваться</a>
             </div>
+            <div class="clearfix"></div>
         </div>
 
 
