--- a/src/app/components/state-info/state-info.html
+++ b/src/app/components/state-info/state-info.html
@@ -1,9 +1,11 @@
 <div class="my-state-form">
-    <div class="pulse">
-        <span>{{$ctrl.pulse}} <i class="fa fa-heart heart"></i></span>
+    <div class="heart-container">
+        <svg class="heart" width="315" height="288">
+            <image xlink:href="/images/heart.svg" width="315" height="288"/>
+        </svg>
     </div>
-    <div>
-        <!--<p>{{'training_state' | translate}}</p>-->
-        <p> Lorem ipsum </p>
+    <div class="text-pulse">
+        <span>{{$ctrl.pulse}} bpm</span>
+            <!--<p>{{'training_state' | translate}}</p>-->
+        </div>
     </div>
-</div>
