Реализована определение лица по получвемым координатам

--- a/src/app/components/photo-form/photo-form.html
+++ b/src/app/components/photo-form/photo-form.html
@@ -1,6 +1,15 @@
+<!--<div class="my-photo-form">-->
+<!--<div class="photo-container">-->
+<!--<div class="square"></div>-->
+<!--<img src="{{$ctrl.photo}}">-->
+<!--</div>-->
+<!--</div>-->
 <div class="my-photo-form">
     <div class="photo-container">
-        <div class="square"></div>
-        <img src="{{$ctrl.photo}}">
+
+            <img src="{{$ctrl.photo}}">
+
+        <div class="face">
+        </div>
     </div>
 </div>
