--- a/src/app/components/photo-form/photo-form.less
+++ b/src/app/components/photo-form/photo-form.less
@@ -5,17 +5,30 @@
 }
 
 .photo-container {
-    width: 350px;
-    height: 120px;
+    position: absolute;
+    max-width: 350px;
+    max-height: 440px;
+    width: auto;
+    height: auto;
     margin: auto;
-
 }
 
 /* resize images */
 .photo-container img {
     width: 100%;
     height: auto;
+}
 
+.face {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    left: 50px;
+    bottom: 50px;
+    color: red;
+    background-color: red;
+    opacity: 0.2;
+    border: dotted whitesmoke;
 }
 
 .square {
