Добавлена логика опроса сервера по данным пульса

--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -33,7 +33,7 @@
                 <label for="to__registrationField">Нет учетной записи?</label>
             </div>
             <div class="col-md-5 my-text-right1">
-                <a ng-href="#/register" class="my-text-right" id="to__registrationField">Зарегистрироваться</a>
+                <a ui-sref="app.register" class="my-text-right" id="to__registrationField">Зарегистрироваться</a>
             </div>
             <div class="clearfix"></div>
         </div>
