Добавлен стиль к сообщению о состоянии тренировки

--- a/src/app/components/information/information.less
+++ b/src/app/components/information/information.less
@@ -1,6 +1,6 @@
 .container {
     &:before {
-        background: url("/images/logo.png");
+        background: url("/images/heart.svg");
         //background-color: darkmagenta;
         content: '';
         display: inline-block;
