--- a/src/app/components/state-info/state-info.html
+++ b/src/app/components/state-info/state-info.html
@@ -1,4 +1,9 @@
 <div class="my-state-form">
+
+    <div class="connect-error">
+        <div id="rectangle">  <span class="p-style" >Тренировка не началась</span></div>
+    </div>
+
     <div class="heart-container">
         <svg class="heart" width="315" height="288">
             <image xlink:href="/images/heart.svg" width="315" height="288"/>
@@ -6,6 +11,9 @@
     </div>
     <div class="text-pulse">
         <span>{{$ctrl.pulse}} bpm</span>
-            <!--<p>{{'training_state' | translate}}</p>-->
-        </div>
+        <!--<p>{{'training_state' | translate}}</p>-->
     </div>
+
+
+</div>
+
