--- a/src/app/components/state-info/state-info.less
+++ b/src/app/components/state-info/state-info.less
@@ -1,3 +1,32 @@
+.connect-error{
+    margin-bottom: 240px;
+    margin-top: 240px;
+    color: white;
+}
+
+#rectangle {
+    position: relative;
+    width: 223px;
+    height: 34px;
+    background: #D9534F;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
+}
+
+.p-style {
+    position: absolute;
+    text-align: center;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-left: 30px;
+    margin-right: 30px;
+    width: 163px;
+
+}
+
 .heart {
     //font-size: 100px;
     color: red;
