Отлажена анимация сердца в компоненте state-form

--- a/src/app/components/state-info/state-info.less
+++ b/src/app/components/state-info/state-info.less
@@ -70,11 +70,18 @@
 .heart {
     animation: heartbeat 0.7s infinite;
     background: url("/images/heart.svg") 0 0 no-repeat;
-    height: 60px;
-    width: 60px;
+    height: 288px;
+    width: 315px;
 }
 
 .text-pulse {
     font: 50px Roboto;
     text-align: center;
+}
+
+.heart-container {
+    height: 288px;
+    width: 315px;
+    margin-left: auto;
+    margin-right: auto
 }
