--- a/src/app/components/state-info/state-info.html
+++ b/src/app/components/state-info/state-info.html
@@ -5,11 +5,10 @@
     </div>
 
     <div class="heart-container">
-        <svg class="heart" width="315" height="288">
+        <svg class="heart" width="315" height="288" heartbeat-animation-duration="{{$ctrl.pulse}}">
             <image xlink:href="/images/heart.svg" width="315" height="288"/>
         </svg>
     </div>
-    <!--<div class="heart" heartbeat-animation-duration="{{$ctrl.pulse}}"></div>-->
 
     <div class="text-pulse">
         <span>{{$ctrl.pulse}} bpm</span>
