Добавлена логика регистрации с последующим входом

--- a/src/app/components/register-form/register-form.html
+++ b/src/app/components/register-form/register-form.html
@@ -8,8 +8,8 @@
 
     <form ng-submit="$ctrl.onRegister()">
         <div class="form-group">
-            <input class="form-control" type="text" id="loginField" ng-model="$ctrl.formData.login" 
-                   placeholder="e-mail" required/>
+            <input class="form-control" type="text" id="loginField" ng-model="$ctrl.formData.userName"
+                   placeholder="Email" required/>
         </div>
         <div class="form-group">
             <input class="form-control" type="password" id="passwordField" ng-model="$ctrl.formData.password" 
