Настройка навигации между страницами

--- a/src/app/components/login-form/login-form.html
+++ b/src/app/components/login-form/login-form.html
@@ -8,8 +8,8 @@
 
     <form ng-submit="$ctrl.onLogin()">
         <div class="form-group">
-            <input class="form-control" type="text" ng-model="$ctrl.formData.login" id="loginField"
-                   placeholder="e-mail">
+            <input class="form-control" type="text" ng-model="$ctrl.formData.username" id="loginField"
+                   placeholder="Email">
         </div>
         <div class="form-group">
             <input class="form-control" type="password" ng-model="$ctrl.formData.password" id="passwordField"
