--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -10,7 +10,7 @@
 
                 <ul class="nav navbar-nav navbar-right" ng-show="isAuthorized()">
                     <li>
-                        <button type="button" class="btn btn-default navbar-btn">Выход</button>
+                        <button type="button" class="btn btn-default navbar-btn" ng-click="quit()">Выход</button>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
