--- a/src/app/training/training.html
+++ b/src/app/training/training.html
@@ -1,9 +1,8 @@
 <div class="row">
     <div class="col-md-6">
-        <photo-form photo="$ctrl.photo"></photo-form>
+        <photo-form photo="$ctrl.photo" coordinates="$ctrl.coordinates"></photo-form>
     </div>
     <div class="col-md-6">
-        <p ng-show="!$ctrl.isTraining">Тренировка не началась</p>
         <state-info ng-show="$ctrl.isTraining" pulse="$ctrl.pulse"></state-info>
     </div>
 </div>
