Настроено отображение информации о статусе тренировки

--- a/src/app/components/state-info/state-info.html
+++ b/src/app/components/state-info/state-info.html
@@ -1,20 +1,21 @@
 <div class="my-state-form">
 
-    <div class="connect-error">
+    <div class="connect-error" ng-show="!$ctrl.isTraining">
         <div id="rectangle">  <span class="p-style" >Тренировка не началась</span></div>
     </div>
 
-    <div class="heart-container">
-        <svg class="heart" width="315" height="288" heartbeat-animation-duration="{{$ctrl.pulse}}">
-            <image xlink:href="/images/heart.svg" width="315" height="288"/>
-        </svg>
-    </div>
+    <div ng-show="$ctrl.isTraining">
+        <div class="heart-container">
+            <svg class="heart" width="315" height="288" heartbeat-animation-duration="{{$ctrl.pulse}}">
+                <image xlink:href="/images/heart.svg" width="315" height="288"/>
+            </svg>
+        </div>
 
-    <div class="text-pulse">
-        <span>{{$ctrl.pulse}} bpm</span>
-        <!--<p>{{'training_state' | translate}}</p>-->
+        <div class="text-pulse">
+            <span>{{$ctrl.pulse}} bpm</span>
+            <!--<p>{{'training_state' | translate}}</p>-->
+        </div>
     </div>
-
 
 </div>
 
