--- a/src/app/training/training.html
+++ b/src/app/training/training.html
@@ -3,6 +3,6 @@
         <photo-form photo="$ctrl.photo" coordinates="$ctrl.coordinates"></photo-form>
     </div>
     <div class="col-md-6">
-        <state-info ng-show="$ctrl.isTraining" pulse="$ctrl.pulse"></state-info>
+        <state-info is-training="$ctrl.isTraining" pulse="$ctrl.pulse"></state-info>
     </div>
 </div>
