--- a/src/app/components/photo-form/photo-form.less
+++ b/src/app/components/photo-form/photo-form.less
@@ -4,6 +4,10 @@
     min-height: 400px;
 }
 
+.meterColor {
+    background-color: green;
+}
+
 .photo-container {
     position: absolute;
     max-width: 350px;
@@ -21,10 +25,10 @@
 
 .face {
     position: absolute;
-    top: 50px;
-    right: 50px;
-    left: 50px;
-    bottom: 50px;
+   //top: 50px;
+   //right: 50px;
+   //left: 50px;
+   //bottom: 50px;
     color: red;
     background-color: red;
     opacity: 0.2;
