--- a/src/app/training/training.html
+++ b/src/app/training/training.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-        <photo-form photo="$ctrl.photo" coordinates="$ctrl.coordinates"></photo-form>
+        <photo-form photo="$ctrl.photo" coordinates="$ctrl.coordinates" pulse="$ctrl.pulse"></photo-form>
     </div>
     <div class="col-md-6">
         <state-info is-training="$ctrl.isTraining" pulse="$ctrl.pulse"></state-info>
